<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenhub.counter.Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="11"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/grey_heading"
                android:textStyle="bold"
                android:text="@string/tv_heading" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.5"
            android:weightSum="10"
            android:background="@drawable/rectangle_up"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_step_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_step_1"
                    android:textAllCaps="false"
                    android:textSize="38sp"
                    android:textColor="@color/grey"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center">
                <TextView
                    android:id="@+id/tv_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/grey"
                    android:text="@string/tv_task1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2.2">
                    <ImageButton
                        android:id="@+id/iv_electricity_meter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/roundcorner"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/electricity_meter" />
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2" />
                    <ImageButton
                        android:id="@+id/iv_cold_water_meter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        android:background="@drawable/roundcorner"
                        app:srcCompat="@drawable/cold_water_meter" />

                </LinearLayout>

            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.5"
                 android:layout_marginHorizontal="20dp"
                 android:gravity="center"
                android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:gravity="center"
                     android:weightSum="2.2">

                <ImageButton
                    android:id="@+id/iv_hot_water_meter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:background="@drawable/roundcorner"
                    app:srcCompat="@drawable/hot_water_meter" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2" />

                <ImageButton
                    android:id="@+id/iv_heating_meter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:background="@drawable/roundcorner"
                    app:srcCompat="@drawable/heating_meter" />

                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="10">
                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8.5">

                    <ImageButton
                        android:id="@+id/b_nextStep2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:onClick="onClickStepTwo"
                        android:background="@drawable/rounded_corner_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/b_nextStep2"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </FrameLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4" />

            </LinearLayout>
        </LinearLayout>

    <include
        android:visibility="invisible"
        android:id="@+id/noInternerPopup"
        android:layout_width="match_parent"
        layout="@layout/popup_no_internet"
        android:layout_height="match_parent"/>

</FrameLayout>