<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7FA"
        android:orientation="vertical"
        android:weightSum="64">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_margin="30dp"
                app:srcCompat="@drawable/ic_logo"
                android:visibility="visible"
                tools:ignore="VectorDrawableCompat" />

        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="38"
        android:background="@drawable/rectangle_up"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="38">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/grey"
                android:textSize="36sp"
                android:textStyle="bold"
                android:text="Вхiд" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10">

            <FrameLayout
                android:id="@+id/emailBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:background="@drawable/rounded_border_edittext">

                <EditText
                    android:id="@+id/etLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@null"
                    android:hint="@string/sEmailPhone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </FrameLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/passwordBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:background="@drawable/rounded_border_edittext"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="8"
                    android:background="@null"
                    android:hint="@string/sPassword"
                    android:inputType="textPassword|textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <ImageButton
                        android:id="@+id/btnLoginShowPassword"
                        android:layout_width="24dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_eye" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="10">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.75">

                <ImageButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner_button" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="0.3dp"
                    android:text="@string/sLogin"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</FrameLayout>